fix overflow conteneur principale

--- a/src/frontend/src/app/app.component.scss
+++ b/src/frontend/src/app/app.component.scss
@@ -95,3 +95,8 @@ mat-sidenav-content {
 }
 
 .fr-skiplinks .fr-link:hover {}
+
+.mat-sidenav-content{
+  overflow-y: hidden;
+  margin-bottom : 20px;
+}
